<resources>
    <string name="app_name">Roman Calculator</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>

    <string name="IRoman">I</string>
    <string name="VRoman">V</string>
    <string name="XRoman">X</string>
    <string name="LRoman">L</string>
    <string name="CRoman">C</string>
    <string name="DRoman">D</string>
    <string name="MRoman">M</string>

    <string name="equalsign">=</string>
    <string name="additionsign">+</string>
    <string name="subtractionsign">-</string>
    <string name="multiplicationsign">*</string>
    <string name="divisionsign">÷</string>

    <string name="cancelsign">C</string>
    <string name="deletesign">del</string>

    <string name="romansign">Roman</string>
    <string name="intSign">Int</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
