<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--<EditText-->
        <!--android:id="@+id/CalcScreen"-->
        <!--android:layout_width="335dp"-->
        <!--android:layout_height="35dp"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginEnd="16dp"-->
        <!--android:layout_marginRight="16dp"-->
        <!--android:clickable="false"-->
        <!--android:ems="10"-->
        <!--android:focusable="false"-->
        <!--android:focusableInTouchMode="false"-->
        <!--android:inputType="none|textPersonName"-->
        <!--android:longClickable="false"-->
        <!--android:textColorLink="?attr/colorBackgroundFloating"-->
        <!--android:textSize="12.5dp"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.47"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->


    <Button
        android:id="@+id/DivisionSign"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:onClick="Click"
        android:text="@string/divisionsign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deletesign" />

    <Button
        android:id="@+id/Number1"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:onClick="Click"
        android:text="@string/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Number4" />

    <Button
        android:id="@+id/Number2"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:onClick="Click"
        android:text="@string/button2"
        app:layout_constraintStart_toEndOf="@+id/Number1"
        app:layout_constraintTop_toBottomOf="@+id/Number5" />

    <Button
        android:id="@+id/Number3"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:onClick="Click"
        android:text="@string/button3"
        app:layout_constraintStart_toEndOf="@+id/Number2"
        app:layout_constraintTop_toBottomOf="@+id/Number6" />

    <Button
        android:id="@+id/Number0"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:onClick="Click"
        android:text="@string/button0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Number1" />

    <Button
        android:id="@+id/Number4"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:onClick="Click"
        android:text="@string/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Number7" />

    <Button
        android:id="@+id/Number5"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:onClick="Click"
        android:text="@string/button5"
        app:layout_constraintStart_toEndOf="@+id/Number4"
        app:layout_constraintTop_toBottomOf="@+id/Number8" />

    <Button
        android:id="@+id/Number6"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:onClick="Click"
        android:text="@string/button6"
        app:layout_constraintStart_toEndOf="@+id/Number5"
        app:layout_constraintTop_toBottomOf="@+id/Number9" />

    <Button
        android:id="@+id/Number7"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="112dp"
        android:onClick="Click"
        android:text="@string/button7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputScreen" />

    <Button
        android:id="@+id/Number8"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="112dp"
        android:onClick="Click"
        android:text="@string/button8"
        app:layout_constraintStart_toEndOf="@+id/Number7"
        app:layout_constraintTop_toBottomOf="@+id/InputScreen" />

    <Button
        android:id="@+id/Number9"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="112dp"
        android:onClick="Click"
        android:text="@string/button9"
        app:layout_constraintStart_toEndOf="@+id/Number8"
        app:layout_constraintTop_toBottomOf="@+id/InputScreen" />

    <Button
        android:id="@+id/EqualSign"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:onClick="Click"
        android:text="@string/equalsign"
        app:layout_constraintEnd_toStartOf="@+id/AdditionSign"
        app:layout_constraintTop_toBottomOf="@+id/SubtractionSign" />

    <Button
        android:id="@+id/AdditionSign"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:onClick="Click"
        android:text="@string/additionsign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SubtractionSign" />

    <Button
        android:id="@+id/SubtractionSign"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:onClick="Click"
        android:text="@string/subtractionsign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MultiplicationSign" />

    <Button
        android:id="@+id/MultiplicationSign"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:onClick="Click"
        android:text="@string/multiplicationsign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DivisionSign" />

    <!--<EditText-->
        <!--android:id="@+id/InputScreen"-->
        <!--android:layout_width="335dp"-->
        <!--android:layout_height="35dp"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginTop="4dp"-->
        <!--android:layout_marginEnd="16dp"-->
        <!--android:layout_marginRight="16dp"-->
        <!--android:clickable="false"-->
        <!--android:ems="10"-->
        <!--android:focusable="false"-->
        <!--android:focusableInTouchMode="false"-->
        <!--android:gravity="end"-->
        <!--android:inputType="none|textPersonName"-->
        <!--android:longClickable="false"-->
        <!--android:textColorLink="?attr/colorBackgroundFloating"-->
        <!--android:textSize="12.5dp"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.529"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/CalcScreen" />-->

    <Button
        android:id="@+id/CancelSign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:onClick="Click"
        android:text="@string/cancelsign"
        app:layout_constraintEnd_toStartOf="@+id/deletesign"
        app:layout_constraintStart_toEndOf="@+id/Number9"
        app:layout_constraintTop_toBottomOf="@+id/InputScreen" />

    <Button
        android:id="@+id/deletesign"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:onClick="Click"
        android:text="@string/deletesign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputScreen" />

    <!--<EditText-->
        <!--android:id="@+id/RomanScreen"-->
        <!--android:layout_width="335dp"-->
        <!--android:layout_height="35dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginTop="4dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginRight="8dp"-->
        <!--android:clickable="false"-->
        <!--android:ems="10"-->
        <!--android:focusable="false"-->
        <!--android:focusableInTouchMode="false"-->
        <!--android:inputType="none|textPersonName"-->
        <!--android:longClickable="false"-->
        <!--android:textColorLink="?attr/colorBackgroundFloating"-->
        <!--android:textSize="12.5dp"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/InputScreen" />-->

</android.support.constraint.ConstraintLayout>